[gd_scene load_steps=4 format=3 uid="uid://bevwntkj77ffj"]

[ext_resource type="Script" path="res://scenes/obstacles/foosball/foosball_player.gd" id="1_tq6l1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g8ft6"]
size = Vector2(80, 80)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_emb8h"]
polygon = PackedVector2Array(0, 0, 80, 0, 80, 80, 0, 80)

[node name="FoosballPlayer" type="Node2D"]
script = ExtResource("1_tq6l1")

[node name="Body" type="StaticBody2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="ColorRect" type="ColorRect" parent="Body"]
offset_right = 80.0
offset_bottom = 80.0
color = Color(0.6, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2(40, 40)
shape = SubResource("RectangleShape2D_g8ft6")

[node name="Head" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Head"]
offset_right = 80.0
offset_bottom = 80.0
color = Color(1, 0, 0, 1)

[node name="KickTimer" type="Timer" parent="."]

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_emb8h")

[node name="CPUParticlesKick" type="CPUParticles2D" parent="."]
z_index = 1
position = Vector2(40, 40)
emitting = false
amount = 200
one_shot = true
preprocess = 0.2
explosiveness = 0.71
direction = Vector2(2.08165e-12, 2.08165e-12)
spread = 180.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 400.0
initial_velocity_max = 600.0
orbit_velocity_min = -2.0
orbit_velocity_max = 2.0
scale_amount_min = 4.0
scale_amount_max = 7.0
color = Color(2.00392, 0, 0, 1)

[connection signal="timeout" from="KickTimer" to="." method="_on_kick_timer_timeout"]
